--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/assets/icons8-clapperboard-16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>movie browser</title>
+    <title>movie-browser</title>
   </head>
-  <body>
+  <body class="styled-scrollbars">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
